<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/action_stream"
        android:icon="@drawable/ic_action_video"
        android:showAsAction="ifRoom"
        android:title="@string/action_play" />
    <item
        android:id="@+id/oveflow"
        android:icon="@drawable/ic_action_overflow"
        android:showAsAction="always"
        android:title="More">
        <menu>
            <item
                android:id="@+id/action_settings"
                android:orderInCategory="100"
                android:showAsAction="never"
                android:title="@string/action_settings" />
            <item
                android:id="@+id/action_logout"
                android:showAsAction="never"
                android:title="@string/logout" />
        </menu>
    </item>

</menu>
